add basic trend generation

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d = {1: \"2022-05-25\", 2: \"2022-06-03\", 3: \"2022-06-10\", 4: \"2022-06-17\", 5: \"2022-06-24\", 6: \"2022-07-01\", 7: \"2022-07-08\", 8: \"2022-07-15\", 9: \"2022-07-22\", 10: \"2022-07-29\"}\n",
+    "if 1 in d:\n",
+    "    print(\"yes\")"
+   ]
   }
  ],
  "metadata": {
