optimized meetings generation

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -35,37 +35,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating schedule for 8 days between 2022-05-25 and 2022-06-03\n",
-      "Starting at 2024-04-14 12:45:38.541453\n"
+      "Generating schedule for 2172 days between 2012-05-25 and 2022-06-03\n",
+      "Starting at 2024-04-14 15:43:29.325086\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\projects\\schoolDataGeneration\\meeting.py:189: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  dailySchedule = pd.concat([dailySchedule, classSchedule])\n"
+      "c:\\projects\\schoolDataGeneration\\meeting.py:200: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  df = pd.concat([df, dailySchedule])\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|2022-05-25|>>>|2022-05-25|>>>|2022-06-03|12.5%   ETC:0:00:11s\n",
-      "|2022-05-25|>>>|2022-05-26|>>>|2022-06-03|25.0%   ETC:0:00:09s\n",
-      "|2022-05-25|>>>|2022-05-27|>>>|2022-06-03|37.5%   ETC:0:00:08s\n",
-      "|2022-05-25|>>>|2022-05-30|>>>|2022-06-03|50.0%   ETC:0:00:06s\n",
-      "|2022-05-25|>>>|2022-05-31|>>>|2022-06-03|62.5%   ETC:0:00:05s\n",
-      "|2022-05-25|>>>|2022-06-01|>>>|2022-06-03|75.0%   ETC:0:00:03s\n",
-      "|2022-05-25|>>>|2022-06-02|>>>|2022-06-03|87.5%   ETC:0:00:02s\n",
-      "|2022-05-25|>>>|2022-06-03|>>>|2022-06-03|100.0%   ETC:0:00:00s\n"
+      "|2012-05-25|>>>|2012-05-25|>>>|2022-06-03|0.05%   ETC:0:18:42s\n",
+      "|2012-05-25|>>>|2012-05-28|>>>|2022-06-03|0.09%   ETC:0:18:38s\n",
+      "|2012-05-25|>>>|2012-05-29|>>>|2022-06-03|0.14%   ETC:0:18:08s\n",
+      "|2012-05-25|>>>|2012-05-30|>>>|2022-06-03|0.18%   ETC:0:17:54s\n",
+      "|2012-05-25|>>>|2012-05-31|>>>|2022-06-03|0.23%   ETC:0:17:43s\n",
+      "|2012-05-25|>>>|2012-06-01|>>>|2022-06-03|0.28%   ETC:0:17:38s\n",
+      "|2012-05-25|>>>|2012-06-04|>>>|2022-06-03|0.32%   ETC:0:17:31s\n",
+      "|2012-05-25|>>>|2012-06-05|>>>|2022-06-03|0.37%   ETC:0:17:37s\n",
+      "|2012-05-25|>>>|2012-06-06|>>>|2022-06-03|0.41%   ETC:0:17:38s\n",
+      "|2012-05-25|>>>|2012-06-07|>>>|2022-06-03|0.46%   ETC:0:17:34s\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m df_students \u001b[38;5;241m=\u001b[39m students\u001b[38;5;241m.\u001b[39mgenerate(\u001b[38;5;241m800\u001b[39m, df_classes)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# if too many meetings have to be scheduled, may enter infinite loop; if it happens restart the kernel and run the code again\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m df_meetings \u001b[38;5;241m=\u001b[39m \u001b[43mmeeting\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf_courses\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf_classrooms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf_classes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m2012-05-25\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m2022-06-03\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m df_exams \u001b[38;5;241m=\u001b[39m exams\u001b[38;5;241m.\u001b[39mgenerate(\u001b[38;5;241m0\u001b[39m, df_meetings, df_students)\n\u001b[0;32m     11\u001b[0m df_surveys \u001b[38;5;241m=\u001b[39m surveys\u001b[38;5;241m.\u001b[39mgenerate(\u001b[38;5;241m0\u001b[39m, df_meetings, df_students, df_courses)\n",
+      "File \u001b[1;32mc:\\projects\\schoolDataGeneration\\meeting.py:198\u001b[0m, in \u001b[0;36mgenerate\u001b[1;34m(count, courses, rooms, classes, startDate, endDate, schoolStart, schoolEnd)\u001b[0m\n\u001b[0;32m    195\u001b[0m     timer_schedule_class_day\u001b[38;5;241m.\u001b[39mtoc()\n\u001b[0;32m    197\u001b[0m     classSchedule[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClassName\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m singleClass\n\u001b[1;32m--> 198\u001b[0m     dailySchedule \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdailySchedule\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclassSchedule\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    199\u001b[0m dailySchedule[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m date\n\u001b[0;32m    200\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([df, dailySchedule])\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\reshape\\concat.py:395\u001b[0m, in \u001b[0;36mconcat\u001b[1;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[0;32m    380\u001b[0m     copy \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m    382\u001b[0m op \u001b[38;5;241m=\u001b[39m _Concatenator(\n\u001b[0;32m    383\u001b[0m     objs,\n\u001b[0;32m    384\u001b[0m     axis\u001b[38;5;241m=\u001b[39maxis,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    392\u001b[0m     sort\u001b[38;5;241m=\u001b[39msort,\n\u001b[0;32m    393\u001b[0m )\n\u001b[1;32m--> 395\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_result\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\reshape\\concat.py:684\u001b[0m, in \u001b[0;36m_Concatenator.get_result\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    680\u001b[0m             indexers[ax] \u001b[38;5;241m=\u001b[39m obj_labels\u001b[38;5;241m.\u001b[39mget_indexer(new_labels)\n\u001b[0;32m    682\u001b[0m     mgrs_indexers\u001b[38;5;241m.\u001b[39mappend((obj\u001b[38;5;241m.\u001b[39m_mgr, indexers))\n\u001b[1;32m--> 684\u001b[0m new_data \u001b[38;5;241m=\u001b[39m \u001b[43mconcatenate_managers\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    685\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmgrs_indexers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnew_axes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconcat_axis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbm_axis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopy\u001b[49m\n\u001b[0;32m    686\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    687\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcopy \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m using_copy_on_write():\n\u001b[0;32m    688\u001b[0m     new_data\u001b[38;5;241m.\u001b[39m_consolidate_inplace()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\internals\\concat.py:157\u001b[0m, in \u001b[0;36mconcatenate_managers\u001b[1;34m(mgrs_indexers, axes, concat_axis, copy)\u001b[0m\n\u001b[0;32m    154\u001b[0m     out\u001b[38;5;241m.\u001b[39maxes \u001b[38;5;241m=\u001b[39m axes\n\u001b[0;32m    155\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m out\n\u001b[1;32m--> 157\u001b[0m concat_plan \u001b[38;5;241m=\u001b[39m \u001b[43m_get_combined_plan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmgrs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    159\u001b[0m blocks \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    160\u001b[0m values: ArrayLike\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\internals\\concat.py:304\u001b[0m, in \u001b[0;36m_get_combined_plan\u001b[1;34m(mgrs)\u001b[0m\n\u001b[0;32m    301\u001b[0m max_len \u001b[38;5;241m=\u001b[39m mgrs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    303\u001b[0m blknos_list \u001b[38;5;241m=\u001b[39m [mgr\u001b[38;5;241m.\u001b[39mblknos \u001b[38;5;28;01mfor\u001b[39;00m mgr \u001b[38;5;129;01min\u001b[39;00m mgrs]\n\u001b[1;32m--> 304\u001b[0m pairs \u001b[38;5;241m=\u001b[39m \u001b[43mlibinternals\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_concat_blkno_indexers\u001b[49m\u001b[43m(\u001b[49m\u001b[43mblknos_list\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    305\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ind, (blknos, bp) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(pairs):\n\u001b[0;32m    306\u001b[0m     \u001b[38;5;66;03m# assert bp.is_slice_like\u001b[39;00m\n\u001b[0;32m    307\u001b[0m     \u001b[38;5;66;03m# assert len(bp) > 0\u001b[39;00m\n\u001b[0;32m    309\u001b[0m     units_for_bp \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -78,7 +96,7 @@
     "df_classes, df_courses = aClass.generate(10, df_teachers, df_courses)\n",
     "df_students = students.generate(800, df_classes)\n",
     "# if too many meetings have to be scheduled, may enter infinite loop; if it happens restart the kernel and run the code again\n",
-    "df_meetings = meeting.generate(0, df_courses, df_classrooms, df_classes, \"2012-05-25\", \"2022-06-03\")\n",
+    "df_meetings = meeting.generate(0, df_courses, df_classrooms, df_classes, \"2022-05-25\", \"2022-06-03\")\n",
     "df_exams = exams.generate(0, df_meetings, df_students)\n",
     "df_surveys = surveys.generate(0, df_meetings, df_students, df_courses)\n",
     "df_attendance = attendance.generate(0, df_meetings, df_students, df_teachers, df_courses)"
