--- a/main.ipynb
+++ b/main.ipynb
@@ -26,7 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2, 3] + [1,2,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_classes[\"courses\"].iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -86,61 +126,61 @@
        "      <th>0</th>\n",
        "      <td>A22</td>\n",
        "      <td>1</td>\n",
-       "      <td>Sport</td>\n",
-       "      <td>158</td>\n",
-       "      <td>28</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Biology</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>254</td>\n",
+       "      <td>132</td>\n",
+       "      <td>132</td>\n",
+       "      <td>Chemistry</td>\n",
        "      <td>1</td>\n",
-       "      <td>250</td>\n",
+       "      <td>146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>A22</td>\n",
        "      <td>1</td>\n",
-       "      <td>Sport</td>\n",
-       "      <td>158</td>\n",
-       "      <td>28</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Biology</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>254</td>\n",
+       "      <td>259</td>\n",
+       "      <td>259</td>\n",
+       "      <td>Chemistry</td>\n",
        "      <td>1</td>\n",
-       "      <td>250</td>\n",
+       "      <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>A22</td>\n",
        "      <td>1</td>\n",
-       "      <td>Sport</td>\n",
-       "      <td>158</td>\n",
-       "      <td>117</td>\n",
-       "      <td>117</td>\n",
-       "      <td>Physics</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>254</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Biology</td>\n",
        "      <td>1</td>\n",
-       "      <td>103</td>\n",
+       "      <td>186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>A22</td>\n",
        "      <td>1</td>\n",
-       "      <td>Sport</td>\n",
-       "      <td>158</td>\n",
-       "      <td>103</td>\n",
-       "      <td>103</td>\n",
-       "      <td>Chemistry</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>254</td>\n",
+       "      <td>177</td>\n",
+       "      <td>177</td>\n",
+       "      <td>Psychology</td>\n",
        "      <td>1</td>\n",
-       "      <td>66</td>\n",
+       "      <td>160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>A22</td>\n",
        "      <td>1</td>\n",
-       "      <td>Sport</td>\n",
-       "      <td>158</td>\n",
-       "      <td>201</td>\n",
-       "      <td>201</td>\n",
-       "      <td>Music</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>254</td>\n",
+       "      <td>98</td>\n",
+       "      <td>98</td>\n",
+       "      <td>Philosophy</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -155,101 +195,101 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>475</th>\n",
-       "      <td>J17</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Humanistic</td>\n",
-       "      <td>36</td>\n",
-       "      <td>148</td>\n",
-       "      <td>148</td>\n",
-       "      <td>English</td>\n",
-       "      <td>6</td>\n",
-       "      <td>51</td>\n",
+       "      <th>710</th>\n",
+       "      <td>J22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>99</td>\n",
+       "      <td>414</td>\n",
+       "      <td>414</td>\n",
+       "      <td>Homeroom</td>\n",
+       "      <td>2</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>476</th>\n",
-       "      <td>J17</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Humanistic</td>\n",
-       "      <td>36</td>\n",
-       "      <td>130</td>\n",
-       "      <td>130</td>\n",
-       "      <td>PE</td>\n",
-       "      <td>6</td>\n",
-       "      <td>55</td>\n",
+       "      <th>711</th>\n",
+       "      <td>J22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>99</td>\n",
+       "      <td>474</td>\n",
+       "      <td>474</td>\n",
+       "      <td>Homeroom</td>\n",
+       "      <td>3</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>477</th>\n",
-       "      <td>J17</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Humanistic</td>\n",
-       "      <td>36</td>\n",
-       "      <td>247</td>\n",
-       "      <td>247</td>\n",
-       "      <td>Psychology</td>\n",
-       "      <td>6</td>\n",
-       "      <td>169</td>\n",
+       "      <th>712</th>\n",
+       "      <td>J22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>99</td>\n",
+       "      <td>534</td>\n",
+       "      <td>534</td>\n",
+       "      <td>Homeroom</td>\n",
+       "      <td>4</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>478</th>\n",
-       "      <td>J17</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Humanistic</td>\n",
-       "      <td>36</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Religion</td>\n",
-       "      <td>6</td>\n",
-       "      <td>32</td>\n",
+       "      <th>713</th>\n",
+       "      <td>J22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>99</td>\n",
+       "      <td>594</td>\n",
+       "      <td>594</td>\n",
+       "      <td>Homeroom</td>\n",
+       "      <td>5</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>479</th>\n",
-       "      <td>J17</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Humanistic</td>\n",
-       "      <td>36</td>\n",
-       "      <td>359</td>\n",
-       "      <td>359</td>\n",
+       "      <th>714</th>\n",
+       "      <td>J22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Scientific</td>\n",
+       "      <td>99</td>\n",
+       "      <td>654</td>\n",
+       "      <td>654</td>\n",
        "      <td>Homeroom</td>\n",
        "      <td>6</td>\n",
-       "      <td>36</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>480 rows × 9 columns</p>\n",
+       "<p>130 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    ClassName  Year_x Specialization  tID_x courses  cID        Name  Year_y  \\\n",
-       "0         A22       1          Sport    158      28   28     Biology       1   \n",
-       "1         A22       1          Sport    158      28   28     Biology       1   \n",
-       "2         A22       1          Sport    158     117  117     Physics       1   \n",
-       "3         A22       1          Sport    158     103  103   Chemistry       1   \n",
-       "4         A22       1          Sport    158     201  201       Music       1   \n",
+       "0         A22       1     Scientific    254     132  132   Chemistry       1   \n",
+       "1         A22       1     Scientific    254     259  259   Chemistry       1   \n",
+       "2         A22       1     Scientific    254     255  255     Biology       1   \n",
+       "3         A22       1     Scientific    254     177  177  Psychology       1   \n",
+       "4         A22       1     Scientific    254      98   98  Philosophy       1   \n",
        "..        ...     ...            ...    ...     ...  ...         ...     ...   \n",
-       "475       J17       6     Humanistic     36     148  148     English       6   \n",
-       "476       J17       6     Humanistic     36     130  130          PE       6   \n",
-       "477       J17       6     Humanistic     36     247  247  Psychology       6   \n",
-       "478       J17       6     Humanistic     36      10   10    Religion       6   \n",
-       "479       J17       6     Humanistic     36     359  359    Homeroom       6   \n",
+       "710       J22       1     Scientific     99     414  414    Homeroom       2   \n",
+       "711       J22       1     Scientific     99     474  474    Homeroom       3   \n",
+       "712       J22       1     Scientific     99     534  534    Homeroom       4   \n",
+       "713       J22       1     Scientific     99     594  594    Homeroom       5   \n",
+       "714       J22       1     Scientific     99     654  654    Homeroom       6   \n",
        "\n",
        "     tID_y  \n",
-       "0      250  \n",
-       "1      250  \n",
-       "2      103  \n",
-       "3       66  \n",
-       "4        5  \n",
+       "0      146  \n",
+       "1       58  \n",
+       "2      186  \n",
+       "3      160  \n",
+       "4      248  \n",
        "..     ...  \n",
-       "475     51  \n",
-       "476     55  \n",
-       "477    169  \n",
-       "478     32  \n",
-       "479     36  \n",
+       "710     99  \n",
+       "711     99  \n",
+       "712     99  \n",
+       "713     99  \n",
+       "714     99  \n",
        "\n",
-       "[480 rows x 9 columns]"
+       "[130 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,33 +297,8 @@
    "source": [
     "myDf = df_classes.explode(\"courses\")\n",
     "myDf = myDf.merge(df_courses, left_on=\"courses\", right_on=\"cID\")\n",
-    "myDf[myDf[\"Name\"] == \"Homeroom\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['A22', 'A21', 'A20', 'A19', 'A18', 'A17', 'B22', 'B21', 'B20',\n",
-       "       'B19', 'B18', 'B17', 'C22', 'C21', 'C20', 'C19', 'C18', 'C17',\n",
-       "       'D22', 'D21', 'D20', 'D19', 'D18', 'D17', 'E22', 'E21', 'E20',\n",
-       "       'E19', 'E18', 'E17', 'F22', 'F21', 'F20', 'F19', 'F18', 'F17',\n",
-       "       'G22', 'G21', 'G20', 'G19', 'G18', 'G17', 'H22', 'H21', 'H20',\n",
-       "       'H19', 'H18', 'H17', 'I22', 'I21', 'I20', 'I19', 'I18', 'I17',\n",
-       "       'J22', 'J21', 'J20', 'J19', 'J18', 'J17'], dtype=object)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_meetings[\"ClassName\"].unique()"
+    "myDf = myDf[myDf[\"Specialization\"] == \"Scientific\"]\n",
+    "myDf"
    ]
   },
   {
