--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,9 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from utils import defaultCityDistricts, mkdir\n",
+    "\n",
+    "from utils import defaultCityDistricts, defaultCityDistrictsTrendDict, mkdir\n",
+    "import trends\n",
     "\n",
     "import classroom\n",
     "import teachers\n",
@@ -60,18 +62,85 @@
     }
    ],
    "source": [
-    "#This cell generates data\n",
+    "# This cell generates data\n",
+    "\"\"\"\n",
+    "May enter infinite loop if:\n",
+    "  - not enough teachers are generated\n",
+    "  - not enough students are generated\n",
+    "  - not enough classrooms are generated\n",
+    "  - too many courses per day need to be scheduled\n",
+    "if that happens restart the kernel, adjust tuple counts, and run the code again\n",
+    "\"\"\"\n",
+    "\n",
     "\n",
     "df_classrooms = classroom.generate(357, 999)\n",
     "df_teachers = teachers.generate(300)\n",
     "df_courses = course.generate(300, df_teachers)\n",
     "df_classes, df_courses = aClass.generate(10, df_teachers, df_courses)\n",
     "df_students = students.generate(800, df_classes)\n",
-    "# if too many meetings have to be scheduled, may enter infinite loop; if it happens restart the kernel and run the code again\n",
     "df_meetings = meeting.generate(0, df_courses, df_classrooms, df_classes, \"2022-06-27\", \"2022-09-5\")\n",
     "df_exams = exams.generate(0, df_meetings, df_students)\n",
     "df_surveys = surveys.generate(0, df_meetings, df_students, df_courses)\n",
     "df_attendance = attendance.generate(0, df_meetings, df_students, df_teachers, df_courses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.48901515151515"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_surveys[\"Score\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This cell adds trend: people from different city districts have different scores\n",
+    "\n",
+    "housingDf = df_students.copy()\n",
+    "housingDf[\"score\"] = housingDf[\"CityDistrict\"].map(defaultCityDistrictsTrendDict)/50\n",
+    "housingDf = housingDf[[\"sID\", \"score\"]]\n",
+    "trendDict = { sID: score for sID, score in zip(housingDf[\"sID\"], housingDf[\"score\"]) }\n",
+    "trends.addTrendAdditive(df_surveys, \"sID\", trendDict , \"Score\", 0, 20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This cell adds trend: teachers influence the scores of their students\n",
+    "\n",
+    "trendDict = { tID: np.random.normal(0, 10) for tID in df_teachers[\"tID\"] }\n",
+    "trends.addTrendAdditive(df_exams, \"tID\", trendDict , \"Score\", 0, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This cell adds trend: gender influences the scores of students\n",
+    "\n",
+    "trendDict = { sID: np.random.normal(0, 10) for sID in df_students[\"sID\"] }\n",
+    "trends.addTrendAdditive(df_exams, \"sID\", trendDict , \"Score\", 0, 50)"
    ]
   },
   {
@@ -234,16 +303,6 @@
     "df[\"tID2\"] = df[\"tID\"].apply(lambda x: np.random.choice([y for y in df_classes[\"ClassName\"].unique() if y != x]))\n",
     "df[\"update\"] = df.apply(lambda x: f\"Update Class SET tID = '{x['tID']}' WHERE ClassName = '{x['ClassName']}';\", axis=1)\n",
     "df[\"update\"].to_csv(f\"{path}/updateClassesTeacher.sql\", index=False, header=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "import numpy as np"
    ]
   }
  ],
