--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,8 +25,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from utils import mkdir, getSchoolYear\n",
-    "import trends\n",
+    "from utils import mkdir, getSchoolYear, addTrend, fractionRound\n",
+    "import parameters\n",
     "\n",
     "import classroom\n",
     "import teachers\n",
@@ -27,13 +36,12 @@
     "import meeting\n",
     "import exams\n",
     "import surveys\n",
-    "import attendance\n",
-    "import parameters\n"
+    "import attendance\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -41,11 +49,11 @@
      "output_type": "stream",
      "text": [
       "Generating schedule for 15 days between 2020-06-20 and 2020-09-10\n",
-      "Starting at 2024-04-15 14:43:09\n",
+      "Starting at 2024-04-15 15:46:38\n",
       "\n",
       "|2020-06-20|>>>|2020-09-10|>>>|2020-09-10|100.0%   ETC:0:00:00s   \n",
       "\n",
-      "Finished at 2024-04-15 14:43:17\n",
+      "Finished at 2024-04-15 15:46:47\n",
       "\n"
      ]
     }
@@ -139,21 +147,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#This cell adds trend: people from different city districts have different scores\n",
-    "\n",
-    "df_housing_trend = df_students.copy()\n",
-    "df_housing_trend[\"score\"] = df_housing_trend[\"CityDistrict\"].map(parameters.default_city_districts_trend_dict)/50\n",
-    "df_housing_trend = df_housing_trend[[\"sID\", \"score\"]]\n",
-    "trendDict = { sID: score for sID, score in zip(df_housing_trend[\"sID\"], df_housing_trend[\"score\"]) }\n",
-    "trends.addTrendAdditive(df_surveys, \"sID\", trendDict , \"Score\", 0, 20)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -189,6 +182,49 @@
     "df_classes = df_classes[df_classes[\"ClassName\"].isin(df_students[\"ClassName\"])]\n",
     "df_courses_classes = df_classes[~df_classes[\"ClassName\"].isin(df_students[\"ClassName\"])]\n",
     "print(f\"Removed {size - len(df_classes)} classes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This cell adds trend: people from different city districts have different scores\n",
+    "\n",
+    "df_housing_trend = df_students.copy()\n",
+    "df_housing_trend[\"score\"] = df_housing_trend[\"CityDistrict\"].map(parameters.default_city_districts_trend_dict)/50\n",
+    "df_housing_trend = df_housing_trend[[\"sID\", \"score\"]]\n",
+    "trendDict = { sID: score for sID, score in zip(df_housing_trend[\"sID\"], df_housing_trend[\"score\"]) }\n",
+    "addTrend(df_surveys, \"sID\", trendDict , \"Score\", 0, 20, parameters.survey_resolution)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This cell adds trend: teachers influence the scores of their students\n",
+    "\n",
+    "teacherTrendDict = {tID: score for tID, score in zip(df_teachers[\"tID\"], np.random.uniform(-2, 5, len(df_teachers)))}\n",
+    "df_meeting_teachers = df_meetings.merge(df_courses, left_on=\"cID\", right_on=\"cID\", how=\"left\")[[\"mID\", \"tID\"]]\n",
+    "trendDict = { mID: teacherTrendDict[tID] for mID,tID in df_meeting_teachers.values}\n",
+    "addTrend(df_exams, \"mID\", trendDict, \"Score\", 0, 50, parameters.exam_resolution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This cell adds trend: room where the exam was taken influences the score\n",
+    "\n",
+    "roomTrendDict = {roomNumber: score for roomNumber, score in zip(df_classrooms[\"RoomNumber\"], np.random.uniform(-5, 5, len(df_classrooms)))}\n",
+    "df_meeting_rooms = df_meetings[[\"mID\", \"RoomNumber\"]]\n",
+    "trendDict = { mID: roomTrendDict[rID] for mID,rID in df_meeting_rooms.values}\n",
+    "addTrend(df_exams, \"mID\", trendDict, \"Score\", 0, 50, parameters.exam_resolution)"
    ]
   },
   {
