add final version

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from utils import mkdir, getSchoolYear, addTrend, fractionRound\n",
+    "from utils import mkdir, getSchoolYear, addTrend\n",
     "import parameters\n",
     "\n",
     "import classroom\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,11 +49,11 @@
      "output_type": "stream",
      "text": [
       "Generating schedule for 15 days between 2020-06-20 and 2020-09-10\n",
-      "Starting at 2024-04-15 15:46:38\n",
+      "Starting at 2024-04-15 18:33:40\n",
       "\n",
       "|2020-06-20|>>>|2020-09-10|>>>|2020-09-10|100.0%   ETC:0:00:00s   \n",
       "\n",
-      "Finished at 2024-04-15 15:46:47\n",
+      "Finished at 2024-04-15 18:33:50\n",
       "\n"
      ]
     }
@@ -147,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed 0 classrooms\n",
-      "Removed 86 teachers\n",
-      "Removed 23 courses\n",
-      "Removed 0 classes\n"
+      "Removed 0 unused classrooms\n",
+      "Removed 91 unused teachers\n",
+      "Removed 0 unused courses\n",
+      "Removed 0 unused classes\n"
      ]
     }
    ],
@@ -166,27 +166,27 @@
     "size =len(df_classrooms)\n",
     "df_classrooms = df_classrooms[df_classrooms[\"RoomNumber\"].isin(df_meetings[\"RoomNumber\"])]\n",
     "df_classrooms_removed = df_classrooms[~df_classrooms[\"RoomNumber\"].isin(df_meetings[\"RoomNumber\"])]\n",
-    "print(f\"Removed {size - len(df_classrooms)} classrooms\")\n",
+    "print(f\"Removed {size - len(df_classrooms)} unused classrooms\")\n",
     "\n",
     "size =len(df_teachers)\n",
     "df_teachers = df_teachers[df_teachers[\"tID\"].isin(pd.concat([df_classes[\"tID\"], df_courses[\"tID\"]]).unique())]\n",
     "df_teachers_removed = df_teachers[~df_teachers[\"tID\"].isin(df_classes[\"tID\"] + df_courses[\"tID\"])]\n",
-    "print(f\"Removed {size - len(df_teachers)} teachers\")\n",
+    "print(f\"Removed {size - len(df_teachers)} unused teachers\")\n",
     "\n",
     "size =len(df_courses)\n",
     "df_courses = df_courses[df_courses[\"cID\"].isin(df_classes[\"courses\"].explode().unique())]\n",
     "df_courses_removed = df_courses[~df_courses[\"cID\"].isin(df_classes[\"courses\"].explode().unique())]\n",
-    "print(f\"Removed {size - len(df_courses)} courses\")\n",
+    "print(f\"Removed {size - len(df_courses)} unused courses\")\n",
     "\n",
     "size =len(df_classes)\n",
     "df_classes = df_classes[df_classes[\"ClassName\"].isin(df_students[\"ClassName\"])]\n",
     "df_courses_classes = df_classes[~df_classes[\"ClassName\"].isin(df_students[\"ClassName\"])]\n",
-    "print(f\"Removed {size - len(df_classes)} classes\")"
+    "print(f\"Removed {size - len(df_classes)} unused classes\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
