--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -40,11 +49,7 @@
      "output_type": "stream",
      "text": [
       "Generating schedule for 15 days between 2020-06-20 and 2020-09-10\n",
-      "Starting at 2024-04-15 19:44:39\n",
       "\n",
-      "|2020-06-20|>>>|2020-09-10|>>>|2020-09-10|100.0%   ETC:0:00:00s   \n",
-      "\n",
-      "Finished at 2024-04-15 19:44:48\n",
       "\n"
      ]
     }
@@ -73,6 +78,7 @@
     "    courseNames=parameters.default_course_names,\n",
     "    df_teachers=df_teachers,\n",
     ")\n",
+    "\n",
     "\n",
     "df_classes, df_courses = aClass.generate(\n",
     "    count=parameters.class_count,\n",
@@ -138,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -146,9 +152,9 @@
      "output_type": "stream",
      "text": [
       "Removed 0 unused classrooms\n",
-      "Removed 89 unused teachers\n",
+      "Removed 1 unused teachers\n",
       "Removed 0 unused courses\n",
-      "Removed 0 unused classes\n"
+      "Removed 6 unused classes\n"
      ]
     }
    ],
@@ -177,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,9 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory data already exists\n"
+     ]
+    }
+   ],
    "source": [
     "#This saves data to .csv files, in format compatible with the database\n",
     "\n",
@@ -306,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
